examples/type_system/failing/162_tuple_destructure_unresolved_strict_e425.flx
fn main() -> Unit {
    let (a, b) = mystery_value
}
